--- a/si/add_to_address.html
+++ b/si/add_to_address.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0058)https://www.bigbilliondays.one/NB/home/add_to_address.html -->
 <html lang="en-IN"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -134,26 +133,9 @@ body,a,p,span,div,input,button,h1,h2,h3,h4,h5,h6,button, input, optgroup, select
        </div>
        <div class="col-11">
           <div class="menu-logo">
-             <!-- <img alt="menu" src="http://goalgiftstoree.goalgift.online/img/small-logo.png" height="30px"> -->
              <h4 class="mb-0 mt-1 ms-2">Add delivery address</h4>
           </div>
        </div>
-       <!-- <div class="col-1">
-          <div class="menu-icon">
-              <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><g fill="#000" fill-rule="evenodd"><path d="m11.618 9.897l4.225 4.212c.092.092.101.232.02.313l-1.465 1.46c-.081.081-.221.072-.314-.02l-4.216-4.203"/><path d="m6.486 10.901c-2.42 0-4.381-1.956-4.381-4.368 0-2.413 1.961-4.369 4.381-4.369 2.42 0 4.381 1.956 4.381 4.369 0 2.413-1.961 4.368-4.381 4.368m0-10.835c-3.582 0-6.486 2.895-6.486 6.467 0 3.572 2.904 6.467 6.486 6.467 3.582 0 6.486-2.895 6.486-6.467 0-3.572-2.904-6.467-6.486-6.467"/></g></svg>            </div>
-          </div>
-          <div class="col-1">
-          <div class="menu-icon">
-              <svg width="16" height="16" viewBox="0 0 15 15" xmlns="external452e452e452e452e.html?link=http://www.w3.org/2000/svg">
-          <g fill="#878787" fill-rule="evenodd">
-          <path d="m5.189 13.04c0 .996-.791 1.804-1.767 1.804-.976 0-1.767-.808-1.767-1.804 0-.996.791-1.804 1.767-1.804.976 0 1.767.808 1.767 1.804"></path>
-          <path d="m14.912 2.259h-14.298l2.247 6.917c.042.129.16.216.293.216h8.06c-.064.69-.629 1.841-1.702 1.841h-6.04l1.072 1.991h5.611c1.881 0 2.938-2.278 3.657-4.719.888-3.01 1.219-6.245 1.106-6.245"></path>
-          <path d="m.615 2.259l-.592-1.828c-.08-.207.069-.431.287-.431h1.482c.126 0 .24.079.287.198l.682 2.061c0 0-.63 1.642-1.942.066"></path>
-          <path d="m2.262.756c0 0 .498 1.503 2.234 1.503l-1.736.749-1.104-.749.607-1.503"></path>
-          <path d="m13.424 13.325c0 .837-.664 1.516-1.484 1.516-.82 0-1.484-.679-1.484-1.516 0-.837.664-1.516 1.484-1.516.82 0 1.484.679 1.484 1.516"></path>
-          </g>
-          </svg>            </div>
-          </div> -->
     </div>
  </div>
  <div class="_1fhgRH mb-70">
@@ -174,7 +156,7 @@ body,a,p,span,div,input,button,h1,h2,h3,h4,h5,h6,button, input, optgroup, select
              <path fill-rule="evenodd" clip-rule="evenodd" d="M198 17.5H282V18.5H198V17.5Z" fill="#DBDBDB"></path>
           </svg>
        </div>
-       <form method="post" id="" action="https://www.bigbilliondays.one/NB/home/add_to_cart.php">
+       <form method="post" id="" action="./Online Shopping.html">
           <div class="card-body">
              <div class="form-floating mb-3">
                 <input class="form-control" type="text" id="name" name="name" placeholder="Full name" required="">
@@ -259,36 +241,4 @@ body,a,p,span,div,input,button,h1,h2,h3,h4,h5,h6,button, input, optgroup, select
 
 <script async="" src="./add_to_address_files/j2zrlgwq7j"></script><script defer="" src="./add_to_address_files/jquery.min.js.download"></script>
 <script defer="" src="./add_to_address_files/bootstrap.min.js.download"></script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "j2zrlgwq7j");
-</script>
-<!-- Google tag (gtag.js) -->
-<script async="" src="./add_to_address_files/js"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-BR6VFX256T');
-</script>
-  <!-- Default Statcounter code for
-https://bigbillion.today/One-Fc/
-https://bigbillion.today/One-Fc/ -->
-<script type="text/javascript">
-var sc_project=12927450; 
-var sc_invisible=1; 
-var sc_security="8bb535d7"; 
-</script>
-<script type="text/javascript" src="./add_to_address_files/counter.js.download" async=""></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12927450/0/8bb535d7/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
 </div></div></body></html>
