--- a/si/Online Shopping.html
+++ b/si/Online Shopping.html
@@ -147,12 +147,7 @@ body,a,p,span,div,input,button,h1,h2,h3,h4,h5,h6,button, input, optgroup, select
     </div>
         <div class="card px-3 py-4 mb-2" style="text-align: left;">
        <h3 style="text-align: left; font-weight:bold; font-size:20px ">Delivery In : 2-3 Working Days</h3>
-       <div class="address-div mt-2" style="text-align: left;">
-          
-          <div class="mb-2 customer-address" style="text-align: left; color:#008c00;  font-weight:bold;  font-size:16px">Name:&nbsp;Charles J. Deer </div>
-          <div class="mb-2 customer-address" style="text-align: left; color:#008c00; font-weight:bold; font-size:16px">Address:&nbsp;dsvfsfdfgdf, 1786 Middleville Road Pasadena, CA 91104, Kolkata, AP 70007</div>
-          <div class="mb-2 customer-address" style="text-align: left; color:#008c00; font-weight:bold; font-size:16px">Contact:&nbsp;1234567899</div>
-         
+       <div class="address-div mt-2" style="text-align: left;">    
        </div>
     </div>
     <div class="card px-3 py-4 mb-2">
@@ -216,7 +211,7 @@ body,a,p,span,div,input,button,h1,h2,h3,h4,h5,h6,button, input, optgroup, select
           <span class="strike mrp ms-0 mb-1" id="mrp" style="width: 50%;float: left;"></span>
           <span class="selling_price" id="selling_price" style="width: 50%;float: left;position: right;font-size: 20px; font-weight:bold;">₹499</span>
        </div>
-       <a class="buynow-button product-page-buy col-6 btn-continue" href="https://www.bigbilliondays.one/NB/home/Pay/now.php">
+       <a class="buynow-button product-page-buy col-6 btn-continue" href="./Make Payment.html">
        Continue
        </a>
     </div>
@@ -226,44 +221,10 @@ body,a,p,span,div,input,button,h1,h2,h3,h4,h5,h6,button, input, optgroup, select
 <footer class="seofooter" id="seofooter">
 </footer>
 
-<script async="" src="./Online Shopping_files/j2zrlgwq7j"></script><script defer="" src="./Online Shopping_files/jquery.min.js.download"></script>
-<script defer="" src="./Online Shopping_files/bootstrap.min.js.download"></script>
-
 <script>
 if ( window.history.replaceState ) {
   window.history.replaceState( null, null, window.location.href );
 }
 </script>
-<!-- Google tag (gtag.js) -->
-<script async="" src="./Online Shopping_files/js"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-BR6VFX256T');
-</script>
-  <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "j2zrlgwq7j");
-</script>
-<!-- Default Statcounter code for
-https://bigbillion.today/One-Fc/
-https://bigbillion.today/One-Fc/ -->
-<script type="text/javascript">
-var sc_project=12927450; 
-var sc_invisible=1; 
-var sc_security="8bb535d7"; 
-</script>
-<script type="text/javascript" src="./Online Shopping_files/counter.js.download" async=""></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12927450/0/8bb535d7/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
 </div></body></html>
