--- a/si/add_to_address.html
+++ b/si/add_to_address.html
@@ -156,7 +156,7 @@ body,a,p,span,div,input,button,h1,h2,h3,h4,h5,h6,button, input, optgroup, select
              <path fill-rule="evenodd" clip-rule="evenodd" d="M198 17.5H282V18.5H198V17.5Z" fill="#DBDBDB"></path>
           </svg>
        </div>
-       <form method="post" id="" action="./Online Shopping.html">
+       <form method="get" id="" action="./Online Shopping.html">
           <div class="card-body">
              <div class="form-floating mb-3">
                 <input class="form-control" type="text" id="name" name="name" placeholder="Full name" required="">
